tests/Checker/everything/errors/3a.vc
void a;

int main() { return 1; }
